--- a/new_product.html
+++ b/new_product.html
@@ -12,7 +12,7 @@
 		<div class="topbar">
 			<div class="container">
 				<div class="topbar-nav">
-					<a>您好，欢迎光临小米商城！</a><span>|</span>
+					<a>您好，欢迎光临积沐！</a><span>|</span>
 					<a href="" class="nav-title">我的订单</a><span>|</span>
 					<a href="" class="nav-title">收藏中心<i class="iconfont">&#xe79d;</i></a><span>|</span>
 					<a href="" class="nav-title">我的V+<i class="iconfont">&#xe7b2;</i></a><span>|</span>
@@ -34,7 +34,7 @@
 		<div class="header">
 			<div class="container">
 				<div class="header-logo">
-					<a href="#" class="lr">小米官网</a>
+					<a href="#" class="lr">积沐官网</a>
 				</div>
 				<div class="pic-log">
 					<ul class="pic-list">
@@ -85,8 +85,7 @@
 						<input type="search" name="keyboard" class="search-text"/>
 						<input type="submit" value="&#xe651;" class="search-btn iconfont"/>
 					</form>
-				</div>
-				
+				</div>	
 			</div>
 		</div>
 		
@@ -138,6 +137,15 @@
 					<div class="chooseall"><input  type="checkbox" />选择全部</li></div>
 					<input type="button" value="显示筛选结果" class="but"/>
 				</div>
+				<div id="miaosha">
+					<div id="d1">19:00场</div><br/>
+							<img src="img/new_products/miaosha.JPG" width="50px" height="50px" />
+							<div id="tip">距离结束还有</div>
+							<div id="time"><span class="day">0</span>天:
+											<span class="hour">1</span>时:
+											<span class="minute">2</span>分:
+											<span class="second">3</span>秒</div>
+							</div>
 				<div class="classify-goods">
 					<ul>
 						<li>
@@ -145,7 +153,7 @@
 								<img src="./img/new_products/1.webp" />
 							</div>
 							<div class="info">
-								<p><a href="" class="series">时装秀系列</a><i onclick="s1()" id="icon1" class="iconfont iconfont-ai">&#xe601;</i></p>
+								<p><a href="" class="series">时装秀系列</a><i class="iconfont iconfont-ai">&#xe601;</i></p>
 								<p><a href="" class="title">徽标图案棉质拼羔羊皮马术外套</a></p>
 								<p><a href="" class="price">¥30,500.00</a></p>
 							</div>
@@ -275,6 +283,7 @@
 						<li><a href="">格纹 · 条纹</a></li>
 						<li><a href="">Her Blossom「花与她」</a></li>
 					</ul>
+					<!-- 锚 跳转到最顶部 -->
 					<a href="#marker"><i class="iconfont iconfont-arrow">&#xebf4;</i></a>
 				</div>
 			</div>
@@ -331,9 +340,4 @@
 	</div>
 		<script src="./js/classify.js"></script>
 	</body>
-	<script>
-		    function s1(){
-				document.getElementById("icon1").style.color="green";
-			}
-	</script>
 </html>
